syntax = "proto3";
package user;

option csharp_namespace = "SM.Service.Messages";

message AddUserPatternMessage {
    string id = 1;
    string messageId = 2;
}
