syntax = "proto3";
package user;

option csharp_namespace = "SM.Service.Messages";

message DeleteUserPatternMessage {
    string id = 1;
    string patternId = 2;
}
